--- a/.github/workflows/main_personalfinancetracker-1.yml
+++ b/.github/workflows/main_personalfinancetracker-1.yml
@@ -24,8 +24,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -58,5 +57,5 @@ jobs:
         with:
           app-name: 'personalfinancetracker-1'
           slot-name: 'Production'
-          package: .
+          package: 'release.zip'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B949B5F8CC3B454A9C6B92120FA5F289 }}
