--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-finance-tracker",
   "version": "0.1.0",
-  "proxy": "https://personal-finance-tracker-server.azurewebsites.net/",
+  "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
