--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-finance-tracker",
   "version": "0.1.0",
-  "proxy": "http://localhost:8080",
+  "proxy": "https://personal-finance-tracker-server.azurewebsites.net",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -17,6 +17,7 @@
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "typescript": "^5.4.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
