--- a/.github/workflows/main_personal-finance-tracker-client.yml
+++ b/.github/workflows/main_personal-finance-tracker-client.yml
@@ -30,7 +30,7 @@ jobs:
         uses: TheDoctor0/zip-release@0.6.1
         with:
           filename: release.zip
-          path: ./*
+          path: ./build/*
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
