--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
         "@mui/icons-material": "^5.15.15",
+        "@react-oauth/google": "^0.12.1",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "apexcharts": "^3.48.0",
+        "axios": "^1.6.8",
         "plotly.js": "^1.47.4",
         "plotly.js-dist": "^2.30.1",
         "react": "^18.2.0",
