--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@emotion/styled": "^11.11.5",
         "@mui/icons-material": "^5.15.15",
         "@react-oauth/google": "^0.12.1",
+        "@tanstack/react-table": "^8.16.0",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
