--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
+        "@hookform/resolvers": "^3.3.4",
         "@mui/icons-material": "^5.15.15",
         "@react-oauth/google": "^0.12.1",
         "@tanstack/react-table": "^8.16.0",
@@ -19,13 +20,15 @@
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.1",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.51.4",
         "react-markdown": "^9.0.1",
         "react-pro-sidebar": "^0.7.1",
         "react-router-dom": "^6.22.3",
         "react-scripts": "5.0.1",
         "react-toastify": "^10.0.5",
         "recharts": "^2.12.5",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "zod": "^3.23.8"
     },
     "scripts": {
         "start": "react-scripts start",
