--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.1",
         "react-dom": "^18.2.0",
+        "react-helmet": "^6.1.0",
         "react-hook-form": "^7.51.4",
         "react-markdown": "^9.0.1",
         "react-pro-sidebar": "^0.7.1",
