--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
         "@testing-library/user-event": "^13.5.0",
         "apexcharts": "^3.48.0",
         "axios": "^1.6.8",
+        "debug": "^4.3.4",
+        "dotenv-expand": "^11.0.6",
+        "isexe": "^3.1.1",
         "plotly.js": "^1.47.4",
         "plotly.js-dist": "^2.30.1",
         "react": "^18.2.0",
