--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "react-helmet": "^6.1.0",
         "react-hook-form": "^7.51.4",
         "react-markdown": "^9.0.1",
+        "react-modal": "^3.16.1",
         "react-pro-sidebar": "^0.7.1",
         "react-router-dom": "^6.22.3",
         "react-scripts": "5.0.1",
