--- a/package.json
+++ b/package.json
@@ -1,62 +1,71 @@
 {
-    "name": "personal-finance-tracker",
-    "version": "0.1.0",
-    "proxy": "https://personal-finance-tracker-server.azurewebsites.net",
-    "private": true,
-    "dependencies": {
-        "@emotion/react": "^11.11.4",
-        "@emotion/styled": "^11.11.5",
-        "@hookform/resolvers": "^3.3.4",
-        "@mui/icons-material": "^5.15.15",
-        "@react-oauth/google": "^0.12.1",
-        "@tanstack/react-table": "^8.16.0",
-        "@testing-library/jest-dom": "^5.17.0",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
-        "apexcharts": "^3.48.0",
-        "axios": "^1.6.8",
-        "debug": "^4.3.4",
-        "dotenv-expand": "^11.0.6",
-        "framer-motion": "^11.2.6",
-        "isexe": "^3.1.1",
-        "plotly.js": "^1.47.4",
-        "plotly.js-dist": "^2.30.1",
-        "react": "^18.2.0",
-        "react-apexcharts": "^1.4.1",
-        "react-dom": "^18.2.0",
-        "react-helmet": "^6.1.0",
-        "react-hook-form": "^7.51.4",
-        "react-markdown": "^9.0.1",
-        "react-modal": "^3.16.1",
-        "react-pro-sidebar": "^0.7.1",
-        "react-router-dom": "^6.22.3",
-        "react-scripts": "5.0.1",
-        "react-toastify": "^10.0.5",
-        "recharts": "^2.12.5",
-        "web-vitals": "^2.1.4",
-        "zod": "^3.23.8"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    }
+  "name": "personal-finance-tracker",
+  "version": "0.1.0",
+  "proxy": "https://personal-finance-tracker-server.azurewebsites.net",
+  "private": true,
+  "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^5.15.15",
+    "@react-oauth/google": "^0.12.1",
+    "@tanstack/react-table": "^8.16.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.48.0",
+    "axios": "^1.6.8",
+    "debug": "^4.3.4",
+    "dotenv-expand": "^11.0.6",
+    "framer-motion": "^11.2.6",
+    "isexe": "^3.1.1",
+    "jest": "^27.5.1",
+    "node-fetch": "^3.3.2",
+    "plotly.js": "^1.47.4",
+    "plotly.js-dist": "^2.30.1",
+    "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.51.4",
+    "react-markdown": "^9.0.1",
+    "react-modal": "^3.16.1",
+    "react-pro-sidebar": "^0.7.1",
+    "react-router-dom": "^6.22.3",
+    "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
+    "recharts": "^2.12.5",
+    "web-vitals": "^2.1.4",
+    "zod": "^3.23.8"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "test": "jest"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "jest-fetch-mock": "^3.0.3"
+  },
+  "jest": {
+    "setupFiles": ["./jest.setup.js"]
+  }
 }
