--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-finance-tracker",
   "version": "0.1.0",
-  "proxy": "https://personal-finance-tracker-server.azurewebsites.net",
+  "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -63,9 +63,13 @@
     ]
   },
   "devDependencies": {
-    "jest-fetch-mock": "^3.0.3"
+    "daisyui": "^4.11.1",
+    "jest-fetch-mock": "^3.0.3",
+    "tailwindcss": "^3.4.3"
   },
   "jest": {
-    "setupFiles": ["./jest.setup.js"]
+    "setupFiles": [
+      "./jest.setup.js"
+    ]
   }
 }
