chore: Add react-cookie-consent package and implement cookie consent dialog

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "plotly.js-dist": "^2.30.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.4",
